kubernetes/apps/piraeus-datastore/linstor/app/httproute.yaml
---
# yaml-language-server: $schema=https://datreeio.github.io/CRDs-catalog/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: linstor-gui
spec:
  hostnames:
   - "linstor.musai.ovh"
  parentRefs:
    - name: envoy-internal
      namespace: network
      sectionName: https
rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: linstor-gui
          port: 3370
